Mon Aug 27 12:22:40 CEST 2007 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h libgamin/gam_api.c: applied suggested changes
	  from Ryan Underwood about missing (empty) entry point in the
	  API and ABI, should close 398405.

Mon Aug  6 10:39:13 CEST 2007 Daniel Veillard <veillard@redhat.com>

	* configure.in: applied patch from Daniel Drake to fix the way
	  optimizatio and debug flags are handled, fixes #450262

Fri Jul 27 16:50:02 CEST 2007 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in doc//*: prepare release of 0.1.9 rebuild the docs

Wed Jul  4 15:37:23 CEST 2007 Daniel Veillard <veillard@redhat.com>

	* server/gam_kqueue.c server/gam_poll_basic.c: changes from
	  Brendan Cully to compile on OS X

2007-07-03  Ray Strode  <rstrode@redhat.com>

	* server/gam_service.c:
	* server/gam_fs.c:
	* server/gam_fs.h: always poll if --disable-inotify and
	--disable-dnotify are passed (bug 335411).

2007-04-11  Alexander Larsson  <alexl@redhat.com>

        * server/inotify-helper.c:
        * server/inotify-kernel.c:
        * server/inotify-path.c:
	Handle inotify initialization failing better by
	only setting initialized to TRUE if initialization
	succeeded.
	Patch from Robert Clark (robert3@ratty.org.uk)

2007-03-07  Alexander Larsson  <alexl@redhat.com>

	* server/gam_poll_basic.c (gam_poll_basic_poll_file):
	Don't run polling idle handler if not needed.

Mon Nov 20 18:01:03 CET 2006 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_data.c: applied patches based on Michael Banck
	  suggestions to build on Hurd and kFreeBSD, should fix #377050
	  and #377066

2006-11-20  Alexander Larsson  <alexl@redhat.com>

	* server/gam_inotify.c: (gam_inotify_init):
	Enable the basic polling code for the inotify
	backend so e.g. polling on NFS works.

Tue Oct 31 15:33:28 CET 2006 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in doc//*: prepare release of 0.1.8 rebuild the docs
